# pocket-vault

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: cli.rs  crypto.rs  main.rs  store.rs
