[package]
name = "pocket-vault"
version = "0.1.0"
edition = "2024"
description = "Offline secret manager with age encryption"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
dirs = "5"
age = "0.10"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = "1"
